# xiaozhi-fonts

./: CMakeLists.txt  font.py  font_awesome.py  font_emoji.py  generate_emoji.py  idf_component.yml
src/: font_emoji_32.c  font_emoji_64.c  font_noto_14_1_zh_tc.c
src/emoji/: emoji_1f602_32.c  emoji_1f602_64.c  emoji_1f606_32.c  emoji_1f606_64.c  emoji_1f609_32.c  emoji_1f609_64.c  emoji_1f60a_32.c  emoji_1f60a_64.c  emoji_1f60c_32.c  emoji_1f60c_64.c  emoji_1f60d_32.c  emoji_1f60d_64.c  emoji_1f60e_32.c  emoji_1f60e_64.c  emoji_1f60f_32.c  emoji_1f60f_64.c  emoji_1f614_32.c  emoji_1f614_64.c  emoji_1f618_32.c  emoji_1f618_64.c  emoji_1f61c_32.c  emoji_1f61c_64.c  emoji_1f620_32.c  emoji_1f620_64.c  emoji_1f62d_32.c  emoji_1f62d_64.c  emoji_1f62f_32.c  emoji_1f62f_64.c  emoji_1f632_32.c  emoji_1f632_64.c  emoji_1f633_32.c  emoji_1f633_64.c  emoji_1f634_32.c  emoji_1f634_64.c  emoji_1f636_32.c  emoji_1f636_64.c  emoji_1f644_32.c  emoji_1f644_64.c  emoji_1f914_32.c  emoji_1f914_64.c  (+2 more)
